src/scss/components/_alert.scss
.alert {
	background-color: #d9edf7;
	padding: 0.5em;

	.icon {
		font-size: 200%;
		vertical-align: middle;
	}
}

.alert--success {
	background-color: #dff0d8;
}

.alert--warning {
	background-color: #fcf8e3;
}

.alert--error {
	background-color: #f2dede;
}

